<resources>
    <string name="app_name">APA</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="interface_demo">Interface Demo</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="add_structure">Add a structure</string>
    <string name="structure_name">Structure name</string>
    <string name="structure_description">Structure description</string>
    <string name="structure_pathologies">List of pathologies</string>
    <string name="add_session">Add a session</string>
    <string name="session_date">Session date</string>
    <string name="session_duration">Session duration</string>
    <string name="session_duration_in_minutes">Duration in minutes</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="collaborator">Collaborator</string>
    <string name="you_are_a">You are a :</string>
    <string name="add_a_structure">Add a Structure :</string>
    <string name="add_a_session">Add a Session :</string>
    <string name="add_an_activity">Add an Activity</string>
    <string name="activity_title">Activity title</string>
    <string name="activity_description">Activity description</string>
    <string name="activity_duration_in_days">Duration in days</string>
    <string name="activity_duration_in_hours">Duration in hours</string>
    <string name="add_activity">Add an Activity</string>
    <string name="add_course">Add Course</string>
    <string name="title_demo_fragment">Demo</string>
    <string name="add_a_course">Add a Course :</string>
    <string name="course_title">Course Title</string>
    <string name="course_description">Course Description</string>
    <string name="course_category">Course Category</string>
    <string name="title_1">Title 1</string>
    <string name="description_1">Description 1</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hours">hours</string>
    <string name="structure">Structure</string>
    <string name="structure_discipline">Structure discipline</string>
    <string name="discipline">Discipline</string>
    <string name="activities">Activities :</string>
    <string name="structures">Structures :</string>
    <string name="calendar">Calendar</string>
    <string name="session_of">Session of</string>
    <string name="activity">Activity</string>
    <string name="patients">Patients :</string>
    <string name="patient_name">Patient name</string>
    <string name="patient_age">Patient age</string>
    <string name="age">Age</string>
    <string name="years">years</string>
    <string name="name">Name</string>
    <string name="Patients">Patients</string>
    <string name="Register">Register :</string>
    <string name="Confirmation">Confirmation</string>
    <string name="invalid_email">Invalid email</string>
    <string name="passwords_dont_match">Passwords have to match</string>
    <string name="password_must_be_6_characters_or_more">Password must be at least 6 characters or more</string>
    <string name="invalid_name">Invalid name</string>
    <string name="Birthday">Birthday</string>
    <string name="phone_number">Phone Number</string>
    <string name="Login">Login :</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="user_exists">A user with this email address already exists</string>
    <string name="success">Success</string>
    <string name="logged_in_as">Looged in as</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="my_sessions">My sessions :</string>
    <string name="action_logout">Logout</string>
    <string name="patient_name_title">Patient name :</string>
    <string name="patient_age_title">Patient Age :</string>
    <string name="patient_birthday">Patient Birthday</string>
    <string name="patient_birthday_title">Patient Birthday :</string>
    <string name="patient_phone_number_title">Phone Number :</string>
    <string name="patient_phone_number">Phone Number</string>
    <string name="patient_last_name_title">Last Name :</string>
    <string name="patient_first_name_title">First Name :</string>
    <string name="assign_a_course">Assign a Course</string>
    <string name="incomplete_data">Incomplete data</string>
    <string name="Courses">Courses</string>
    <string name="course_title_title">Course title :</string>
    <string name="course_description_title">Course description :</string>
    <string name="course_category_title">Category</string>
    <string name="patient_title">Patient :</string>
    <string name="Edit_activity">Edit activity :</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="session_date_time">Session Date</string>
    <string name="session_time">Session time</string>
    <string name="session_structure">Session Structure</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Structures">Structures</string>
    <string name="at">at</string>
    <string name="Duration">Duration :</string>
    <string name="minutes">minutes</string>
    <string name="Structure">Structure :</string>
    <string name="action_profile">My profile</string>
    <string name="Modify_my_profile">Modify my profile :</string>
    <string name="invalid_age">You must be 18 years old or older</string>
    <string name="loading_progress_bar_text">Loading. Please wait...</string>
    <string name="invalid_date">Invalid date</string>
    <string name="empty_date">Date can\'t be empty</string>
    <string name="empty_time">Time can\'t be empty</string>
    <string name="empty_duration">Duration can\'t be empty</string>
    <string name="empty_structure">Structure can\'t be empty</string>
    <string name="no_activities_defined">No activity defined</string>
    <string name="Edit_strcuture">Edit Structure :</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="empty_name">Name can\'t be empty</string>
    <string name="empty_discipline">Discipline can\'t be empty</string>
    <string name="empty_pathology_list">Pathology list can\'t be empty</string>
    <string name="structure_delete_confirmation_text">Do you really want to delete this structure?</string>
    <string name="Courses_title">Courses :</string>
    <string name="no_courses_defined">No courses defined</string>
    <string name="patient_details">Patient details :</string>
    <string name="edit_course_title">Edit a course :</string>
    <string name="course_delete_confirmation_text">Do you really want to delete this course?</string>
    <string name="empty_title">Title can\'t be empty</string>
    <string name="empty_category">Category can\'t be empty</string>
    <string name="empty_activities">At least one activity must be defined</string>
    <string name="empty_description">Description can\'t be empty</string>
    <string name="activity_delete_confirmation_text">Do you really want to delete this activity?</string>
    <string name="logged_out">Logged out</string>
    <string name="free_activity">(Free)</string>
    <string name="no_courses_found">No courses found</string>
    <string name="Sessions">Sessions :</string>
    <string name="no_sessions_defined">No sessions defined</string>
    <string name="no_structures_defined">No structures defined</string>
    <string name="no_structures_found">No structures found</string>
    <string name="course_details">Course details :</string>
    <string name="session_invalid_time">You can\'t define a session in the past</string>
    <string name="session_invalid_time_delete">You can\'t delete a session from the  past</string>
    <string name="Edit_session">Edit a session :</string>
    <string name="session_delete_confirmation_text">Are you sure you want to do delete this session ?</string>
    <string name="cant_modify_or_delete_past_session">Can\'t modify or delete a past session</string>
    <string name="session_duration_too_big">The duration can\'t be more than 480 minutes (8 hours)</string>
    <string name="session_duration_cant_be_negative">Duration has to be more than 0</string>
    <string name="session_details">Session details :</string>
    <string name="Activity">Activity :</string>
    <string name="Session_date_time">Date and time :</string>
    <string name="Session_duration">Duration :</string>
    <string name="Collaborator">Collaborator :</string>
    <string name="reschedule">Reschedule</string>
    <string name="Reschedule_session">Reschedule a session :</string>
    <string name="session_reschedule_request_send">The reschedule request was sent to the collaborator successfully</string>
    <string name="feedback">Feedback</string>
    <string name="no_requests_currently">No requests at the moment</string>
    <string name="session_rescheduled_date_time">Requested date</string>
    <string name="confirm_session_rescheduling">Confirm session rescheduling ?</string>
    <string name="confirm_session_rescheduling_yes">Yes, reschedule the session</string>
    <string name="confirm_session_rescheduling_no">No, remove the request</string>
    <string name="rescheduling_requests">Rescheduling requests</string>
    <string name="time_cant_be_before_8am">Time can\'t be before 08:00</string>
    <string name="session_cant_go_past_6pm">Session can\'t go past 18:00</string>
    <string name="Feedback">Session feedback :</string>
    <string name="Completion_rate">Completion Rate :</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="feedback_submitted">Feedback submitted</string>
    <string name="statistics">Statistics</string>
    <string name="empty_age">Age can\'t be empty</string>
    <string name="home">Home</string>
    <string name="your_courses">Your courses</string>
    <string name="other_courses">Other courses</string>
    <string name="no_patients_found">No patients found</string>
    <string name="Activities">Activities</string>
    <string name="your_activities">Your activities</string>
    <string name="other_activities">Other activities</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not completed</string>
</resources>