<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:paddingStart="@dimen/fragment_horizontal_margin"
            android:paddingLeft="@dimen/fragment_horizontal_margin"
            android:paddingEnd="@dimen/fragment_horizontal_margin"
            android:paddingRight="@dimen/fragment_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/Register"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/birthdayEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/Birthday"
                android:inputType="date"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_local_phone_24"
                android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/passwordConfirmEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/Confirmation"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you_are_a" />

                <RadioButton
                    android:id="@+id/patientRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:checked="true"
                    android:text="@string/patient" />

                <RadioButton
                    android:id="@+id/doctorRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/doctor" />

                <RadioButton
                    android:id="@+id/collaboratorRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/collaborator" />
            </RadioGroup>


        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginBottom="10dp"
            android:text="@string/register" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
            android:textColor="@color/design_default_color_on_secondary"
            app:backgroundTint="@color/design_default_color_secondary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>